syntax = "proto3";

package user.service;

option go_package = "github.com/goatx/goat/user/proto";

message CreateUserRequest {
  string username = 1;
  string email = 2;
  repeated string tags = 3;
}

message CreateUserResponse {
  string user_id = 1;
  bool success = 2;
  int64 error_code = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string username = 1;
  string email = 2;
  bool found = 3;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
